# hartee-fock-v2

./: .gitignore  CMakeLists.txt  Makefile  README.md  hartree-fock.cpp  water.inp
basis-sets/: sto-3g
src/base/: base.h  basis.h  basis.h.in
src/basis/: basis.cpp  basis.h  gaussian.cpp
src/integrals/: base.cpp  base.h  shell_pair.cpp  shell_pair.h
src/integrals/huzinaga/: huzinaga.cpp  huzinaga.h
src/integrals/obara-saika/: obara-saika.cpp  obara-saika.h
src/io/: io.cpp  io.h  logging.cpp  logging.h
src/lookup/: elements.cpp  elements.h
src/math/: math.h
src/symmetry/: symmetry.cpp  symmetry.h  wrapper.h
